--- a/output/index.html
+++ b/output/index.html
@@ -999,7 +999,7 @@
 
 
             <div class="flex gap-2"><button type="submit"
-                    class="hover:bg-red-500 bg-red-600 text-white px-3 py-2 rounded md:block hidden">Register Interest</button><button
+                    class="hover:bg-red-500 bg-red-600 text-white px-3 py-2 rounded sm:block hidden">Register Interest</button><button
                     class="rounded-3xl px-2 py-0 btn bg-transparent" id="switch"><img src="./images/file (5).png"
                         alt=" " width="24px" class="img2"><img src="images/Vector (4).png" alt=" " width="24px"
                         class="img1"></button>
