--- a/output/index.html
+++ b/output/index.html
@@ -989,7 +989,7 @@
             <div><img src="./images/c4u full logo_2022 1 (1).png
                  " alt="" class="img-fluid " style="width: 100%;"></div>
             <div class="justify-center p-0 pt-2">
-                <ul class="navbar-nav accordion-collapse list-unstyled  gap-4  flex hidden">
+                <ul class="navbar-nav accordion-collapse list-unstyled  gap-4  flex hidden md:flex">
                     <li><a href="#" class="nav-item text-red-600 text-decoration-none font-bold">Home</a></li>
                     <li><a href="#" class="text-decoration-none nav-item font-bold">About Us</a></li>
                     <li><a href="#" class="text-decoration-none nav-item font-bold">Upskill</a></li>
